# jhana-reho-repro

./: .gitignore  METHODS_NOTE.md  README.md  REPRODUCTION.md  pyproject.toml  requirements.txt
reports/: afni_reho_validation_mixed.json  ds002748_full_run_summary.json  ds002748_full_run_summary.md
reports/ds002748_full_benchmark_50seeds/: benchmark_by_seed.csv  benchmark_mode_difference_summary.csv  benchmark_mode_differences_by_seed.csv  benchmark_report.json  benchmark_report.md  benchmark_summary.csv
scripts/: run_ds002748_20.sh  run_ds002748_full.sh
src/jhana_repro/: __init__.py  afni.py  classify.py  cli.py  confounds.py  datasets.py  notebook_contract_template.md  reho.py  schemas.py
tests/: test_classify.py  test_reho.py  test_schemas.py
