[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "jhana-repro"
version = "0.1.0"
description = "Public-data reproduction harness for the ACAM-J ReHo classification pipeline"
readme = "README.md"
requires-python = ">=3.11,<3.14"
dependencies = [
  "imbalanced-learn>=0.12",
  "joblib>=1.3",
  "matplotlib>=3.8",
  "nibabel>=5.2",
  "nilearn>=0.10",
  "numpy>=1.26",
  "pandas>=2.1",
  "scikit-learn>=1.4",
  "scipy>=1.11",
]

[project.optional-dependencies]
dev = ["pytest>=8"]
data = ["datalad>=1.4"]

[project.scripts]
jhana-repro = "jhana_repro.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
jhana_repro = ["notebook_contract_template.md"]

[tool.pytest.ini_options]
testpaths = ["tests"]
norecursedirs = [".venv", ".venv313", "runs", "code", "paper", "artifacts"]
